--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide": "^0.511.0",
-    "lucide-react": "^0.511.0",
+    "lucide-react": "^0.515.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -51,6 +51,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
